--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -8,20 +8,26 @@
 </head>
 <body>
 <div class="container">
-  <h1>Welcome</h1>
+  <h1>Welcome to Auth Portal</h1>
 
-  <div class="form-container">
-    <h2>Sign Up</h2>
-    <input type="text" id="signup-email" placeholder="Email" />
-    <input type="password" id="signup-password" placeholder="Password" />
-    <button onclick="signup()">Register</button>
-  </div>
+  <div class="forms-wrapper">
+    <div class="form-container">
+      <h2>Sign Up</h2>
+      <form onsubmit="event.preventDefault(); signup();">
+        <input type="email" id="signup-email" placeholder="Email" required />
+        <input type="password" id="signup-password" placeholder="Password" required />
+        <button type="submit">Register</button>
+      </form>
+    </div>
 
-  <div class="form-container">
-    <h2>Login</h2>
-    <input type="text" id="login-email" placeholder="Email" />
-    <input type="password" id="login-password" placeholder="Password" />
-    <button onclick="login()">Login</button>
+    <div class="form-container">
+      <h2>Login</h2>
+      <form onsubmit="event.preventDefault(); login();">
+        <input type="email" id="login-email" placeholder="Email" required />
+        <input type="password" id="login-password" placeholder="Password" required />
+        <button type="submit">Login</button>
+      </form>
+    </div>
   </div>
 
   <div id="message"></div>
